--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error_text">Ha ocurrido un error</string>
+    <string name="lista_menu_text">Detalle</string>
+    <string name="favorito_menu_text">Favorito</string>
 </resources>
