--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="error_text">Ha ocurrido un error</string>
     <string name="lista_menu_text">Detalle</string>
     <string name="favorito_menu_text">Favorito</string>
-    <string name="weightPoke">Weight:</string>
-    <string name="heightPoke">Height:</string>
+    <string name="weightPoke">Peso:</string>
+    <string name="heightPoke">Altura:</string>
     <string name="todo">TODO</string>
     <string name="name">Name</string>
     <string name="weight">weight</string>
